<resources>
    <string name="app_name">Storyflow</string>
    <string name="crash_message">Please send us the diagnostic report to help improve Storyflow.</string>
    <string name="app_first_letter">S</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">I already have an account</string>
    <string name="privacy_policy_full_text">By using Storyflow you agree to the Privacy Policy and the Term of Service</string>
    <string name="privacy_policy_clickable_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_clickable_terms_of_service">Term of Service</string>
    <string name="hint_email_or_user_name">Email or username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="continue_button">Continue</string>
    <string name="logout_button">Logout</string>
    <string name="done_button">Done</string>
    <string name="email_or_username_cannot_be_empty">Email or username cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_is_invalid">Your password is invalid</string>
    <string name="email_or_username_is_invalid">Your email or username is invalid</string>
    <string name="no_internet_connection">No internet connection. Please try again later.</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lets_reset_your_password">Let\'s reset your password</string>
    <string name="enter_your_email_address">Enter your email address.</string>
    <string name="unknown_server_error">Unknown server error.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="not_existent_email">This email does not exist.</string>
    <string name="existing_account">This account already exist.</string>
    <string name="empty_user_name">User name is empty.</string>
    <string name="invalid_user_name">User name is invalid.</string>
    <string name="user_name_exist">User name already exist.</string>
    <string name="email_is_invalid">Email is invalid.</string>
    <string name="email_is_already_taken">Email is already taken.</string>
    <string name="authentication_error">Unauthorized user. Please restart app.</string>
    <string name="email_was_successfully_sent">Email was successfully sent.</string>
    <string name="choose_user_name">Choose a user name</string>
    <string name="email">Email</string>
    <string name="password">Password (8+ characters)</string>
    <string name="user_name_cannot_be_empty">User name cannot be empty;</string>
    <string name="user_name_contains_incorrect_symbols_and_must_be_in_lowercase">User name contains incorrect symbols and must be in lowercase;</string>
    <string name="email_cannot_be_empty">Email cannot be empty;</string>
    <string name="invalid_email">Invalid email;</string>
    <string name="profile_picture_and_name">Profile Picture &amp; Name</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="name_should_contain_first_last_name_separated_by_space">Name should contain First &amp; Last name separated by space</string>
    <string name="take_new_profile_photo">Take a New Profile Photo</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="permissions_were_not_guaranteed">Permissions were not guaranteed</string>
    <string name="select_picture">Select Picture</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="move_and_scale_photo_to_fit">Move and Scale photo to fit</string>
    <string name="error_while_loading_image">Error while uploading image.</string>
    <string name="user_profile">User profile</string>
    <string name="post_story">Post story</string>
    <string name="post_story_is_about">Post story is about...</string>
    <string name="location">Location</string>
    <string name="post_story_button">Post story</string>
    <string name="emoji">Emoji</string>
    <string name="keyboard">Keyboard</string>
    <string name="cats">Cats</string>
    <string name="retry">Retry</string>
    <string name="story_should_contain_at_least_one_character">Story should contains at least one character or image.</string>
    <string name="private_string">Private</string>
    <string name="select_date">Select date</string>
    <string name="image_will_be_saved_immediately">The image will be saved immediately.</string>

    <!--Stars/Likes-->
    <string name="you_marked_this_story">You marked this story.</string>
    <string name="ss_marked_this_story">%1$s marked this story.</string>
    <string name="you_and_ss_marked_this_story">You and %1$s marked this story.</string>
    <string name="you_ss_and_count_others_marked_this_story">You, %1$s and %2$d others marked this story.</string>
    <string name="ss_and_count_others_marked_this_story">%1$s and %2$d others marked this story.</string>

    <plurals name="plurals_dd_stars">
        <item quantity="one">%d Star</item>
        <item quantity="other">%d Stars</item>
    </plurals>

    <plurals name="plurals_dd_comments">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>


    <string name="daily">DAILY</string>
    <string name="monthly">MONTHLY</string>
    <string name="yearly">YEARLY</string>

    <string name="this_month">THIS MONTH</string>
    <string name="next_month">NEXT MONTH</string>
    <string name="previous_month">PREVIOUS MONTH</string>

    <string name="this_year">THIS YEAR</string>
    <string name="next_year">NEXT YEAR</string>
    <string name="last_year">LAST YEAR</string>

    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="yesterday">YESTERDAY</string>

    <string name="january">JANUARY</string>
    <string name="february">FEBRUARY</string>
    <string name="march">MARCH</string>
    <string name="april">APRIL</string>
    <string name="may">MAY</string>
    <string name="june">JUNE</string>
    <string name="july">JULY</string>
    <string name="august">AUGUST</string>
    <string name="september">SEPTEMBER</string>
    <string name="october">OCTOBER</string>
    <string name="november">NOVEMBER</string>
    <string name="december">DECEMBER</string>

    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    
    <string name="updates">Updates</string>
    <string name="messages">Messages</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="no_stories">NO STORIES</string>

    <string name="star">Star</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="stars">0 Stars</string>
    <string name="comments">0 Comments</string>

</resources>
