<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/sizeNormal">

        <ImageView
            android:id="@+id/adapter_recycler_item_reading_stories_item_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

    </FrameLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/white"
                  android:paddingBottom="@dimen/sizeNormal"
                  android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/greyLightest"
            android:text="@string/stars"
            android:paddingLeft="@dimen/sizeNormal"
            android:textSize="@dimen/textSizeTiny"
            tools:text="0 Stars"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/greyLightest"
            android:text="@string/comments"
            android:paddingLeft="@dimen/sizeNormal"
            android:textSize="@dimen/textSizeTiny"
            tools:text="0 Comments"
            />

    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/greyMostLightest"
        />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="44dp"
                  android:background="@color/white"
                  android:orientation="horizontal">
        <TextView
            android:id="@+id/adapter_recycler_item_reading_stories_item_star"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/greyLightest"
            android:layout_weight="1"
            android:text="@string/star"
            android:textSize="@dimen/textSizeNormal"
            tools:text="Star"
            />

        <TextView
            android:id="@+id/adapter_recycler_item_reading_stories_item_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/greyLightest"
            android:layout_weight="1"
            android:text="@string/comment"
            android:textSize="@dimen/textSizeNormal"
            tools:text="Comment"
            />

        <TextView
            android:id="@+id/adapter_recycler_item_reading_stories_item_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/greyLightest"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="@dimen/textSizeNormal"
            tools:text="Save"
            />

    </LinearLayout>

</LinearLayout>