<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <TextView
            android:id="@+id/activity_browse_stories_period_chooser_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/daily"
            android:padding="@dimen/sizeLarge"
            android:textColor="@drawable/selector_lightgrey_default_text"
            />

        <View android:layout_width="match_parent"
              android:layout_height="1px"
              android:background="@color/greyLightest">
        </View>

        <TextView
            android:id="@+id/activity_browse_stories_period_chooser_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monthly"
            android:padding="@dimen/sizeLarge"
            android:textColor="@drawable/selector_lightgrey_default_text"
            />

        <View android:layout_width="match_parent"
              android:layout_height="1px"
              android:background="@color/greyLightest">
        </View>

        <TextView
            android:id="@+id/activity_browse_stories_period_chooser_yearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yearly"
            android:padding="@dimen/sizeLarge"
            android:textColor="@drawable/selector_lightgrey_default_text"
            />

    </LinearLayout>

</FrameLayout>