<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:weightSum="5"
              android:paddingBottom="@dimen/sizeNormal">


    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:id="@+id/view_tab_bar_updates"
                  android:layout_weight="1"
                  android:gravity="bottom"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_activities"
            tools:text="Updates"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.RoboMediumTiny"
            android:text="@string/updates"
            tools:text="Updates"
            />

    </LinearLayout>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:id="@+id/view_tab_bar_messages"
                  android:layout_weight="1"
                  android:gravity="bottom"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_messages"
            tools:text="Updates"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.RoboMediumTiny"
            android:text="@string/messages"
            tools:text="Messages"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1">

        <com.thirdandloom.storyflow.views.RoundSquareImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_white_stroke_circle"
            android:layout_gravity="center"
            />

        <com.thirdandloom.storyflow.views.RoundSquareImageView
            android:id="@+id/view_tab_bar_flippable_circle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_white_stroke_circle"
            android:layout_margin="@dimen/sizeSmall"
            android:layout_gravity="center"
            />

    </FrameLayout>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:id="@+id/view_tab_bar_post"
                  android:layout_weight="1"
                  android:gravity="bottom"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_post"
            tools:text="Updates"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.RoboMediumTiny"
            android:text="@string/post"
            tools:text="Post"
            />

    </LinearLayout>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:id="@+id/view_tab_bar_profile"
                  android:layout_weight="1"
                  android:gravity="bottom"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_profile"
            tools:text="Updates"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:singleLine="true"
            android:text="@string/profile"
            android:textAppearance="@style/TextAppearance.RoboMediumTiny"
            tools:text="Profile"
            />

    </LinearLayout>

</merge>